--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,9 +9,8 @@
 	color: $color1;
 }
 
-.btnConnect {
-	border: none;
-	padding: 10px 15px;
-	background-color: gray;
-	font-size: 24px;
+h4 {
+	text-align: center;
+	color: red;
+	font-size: 18px;
 }
