--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,8 @@
 
 // Pages
 @import './scss/homePage';
+@import './scss/burnPage';
+
+// components
+@import './scss/navigation';
+@import './scss/footer';
