--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -19,3 +19,12 @@ h4 {
 	text-align: center;
 	color: red;
 }
+
+.bmcLogo {
+	width: 100%;
+	max-width: 149px;
+	height: auto;
+	@media (max-width: 600px) {
+		max-width: 32px;
+	}
+}
