--- a/src/scss/_burnPage.scss
+++ b/src/scss/_burnPage.scss
@@ -1,172 +1,114 @@
 .burnPage {
-	background-color: $color1;
-	width: 100%;
-	max-width: 1440px;
-	margin: 0 auto;
-	position: relative;
-	padding: 20px 20px 100px;
-
-	.wrapperCont {
+	.headerBoxTopM {
 		width: 100%;
-		max-width: 600px;
-		margin: 0 auto;
-		position: relative;
-		.blueMiner {
-			width: 100%;
-			text-align: center;
-			padding-bottom: 50px;
-			img {
-				max-width: 372px;
-				margin: 29px auto;
-			}
-		}
-
-		.connectBox {
-			width: 100%;
-			max-width: 360px;
-			margin: 10px auto;
-			background: #191919;
-			border-radius: 10px;
-			padding: 33px 20px;
-			.btnConnect {
-				@include centerBox();
-				border: none;
-				width: 100%;
-				max-width: 300px;
-				height: 60px;
-				margin: 0 auto;
-				font-weight: bold;
-				font-size: 30px;
-				line-height: 45px;
-				background: #ffffff;
-				border-radius: 4px;
-				color: #000000;
-				cursor: pointer;
-			}
-		}
-		.mintBox {
-			width: 100%;
-			max-width: 360px;
-			margin: 0 auto;
-			background: #191919;
-			border-radius: 10px;
-			padding: 10px 10px 33px;
-			h3 {
-				font-weight: bold;
-				font-size: 24px;
-				line-height: 36px;
-				text-align: center;
-				color: #ffffff;
-			}
-			.totalSupply {
-				font-weight: bold;
-				font-size: 36px;
-				line-height: 54px;
-				text-align: center;
-				color: #faff11;
-				margin: 5px auto 20px;
-				padding: 0;
-			}
-			.quantityBtns {
-				@include centerBox();
-				.quantityBtnMin {
-					border: none;
-					border-radius: 50%;
-					width: 50px;
-					height: 50px;
-					font-weight: bolder;
-					font-size: 40px;
-					text-align: center;
-					color: #000000;
-					background-color: #ffffff;
-					cursor: pointer;
-					@include centerBox();
-					// strong {
-					// 	margin-top: -5px;
-					// 	height: 5px;
-					// 	line-height: 0px;
-					// }
-				}
-				.quantityBtn {
-					@include centerBox();
-					border: none;
-					border-radius: 50%;
-					width: 50px;
-					height: 50px;
-					font-weight: bolder;
-					font-size: 40px;
-					line-height: 50px;
-					text-align: center;
-					color: #000000;
-					cursor: pointer;
-					background-color: #ffffff;
-				}
-				.amount {
-					margin: 10px 50px;
-					font-weight: bold;
-					font-size: 48px;
-					line-height: 72px;
-					text-align: center;
-					color: #ffffff;
-				}
-			}
-
-			h5 {
-				font-size: 14px;
-				line-height: 21px;
-				color: #ffffff;
-				font-weight: 400;
-				padding: 0;
-				width: 100%;
-				text-align: center;
-				margin: 0 auto 10px;
-			}
-			.btnMint {
-				@include centerBox();
-				border: none;
-				width: 300px;
-				height: 60px;
-				margin: 0 auto;
-				font-weight: bold;
-				font-size: 30px;
-				line-height: 45px;
-				background: #ffffff;
-				border-radius: 4px;
-				color: #000000;
-				cursor: pointer;
-			}
-		}
-	}
-
-	.yellowDivisor {
-		width: 100%;
-		position: absolute;
-		bottom: -1px;
-		width: 100%;
-		left: 0;
-		right: 0;
+		@include centerBox(space-between, center);
 		display: none;
 		@media (max-width: 600px) {
-			display: block;
-		}
-	}
-	.yellowDivisor2 {
-		position: absolute;
-		bottom: -1px;
-		width: 100%;
-		left: 0;
-		right: 0;
-		@media (max-width: 600px) {
 			display: none;
+			padding: 50px 20px 30px;
+		}
+		.righBoxTop {
+			@include centerBox();
+			.hashDisplay {
+				min-width: 159px;
+				padding: 10px;
+				text-align: center;
+				background-color: $blackColor;
+				border-radius: 37.5px;
+				margin-left: 20px;
+				h3 {
+					color: white;
+					font-size: 16px;
+				}
+				.connectBox {
+					font-size: 24px;
+					.btnConnect {
+						background-color: black !important;
+						border: none;
+					}
+				}
+			}
 		}
 	}
-}
+	header {
+		padding: 44px;
+		background-image: url('../assets/desktop/topBackground.png');
+		background-repeat: no-repeat;
+		background-size: cover;
+		@media (max-width: 600px) {
+			background-image: url('../assets/mobile/topBackground.png');
+		}
+		.headerBoxTop {
+			width: 100%;
+			@include centerBox(space-between, center);
+			@media (max-width: 600px) {
+				display: none;
+			}
+			.righBoxTop {
+				@include centerBox();
+				.hashDisplay {
+					min-width: 280px;
+					padding: 10px;
+					text-align: center;
+					background-color: $blackColor;
+					border-radius: 37.5px;
+					margin-left: 20px;
+					h3 {
+						color: white;
+					}
+					.connectBox {
+						font-size: 24px;
+						.btnConnect {
+							background-color: black !important;
+							border: none;
+							color: white;
+							h3 {
+								font-size: 24px;
+							}
+						}
+					}
+				}
+			}
+		}
+		.headerBoxBottom {
+			max-width: 500px;
+			margin: 100px auto 88px;
+			@media (max-width: 600px) {
+				margin: 20px auto 28px;
+			}
 
-.socialMediaBottom {
-	@include centerBox();
-	flex-wrap: nowrap;
-	margin: 20px auto;
-	img {
-		margin: 0 10px;
+			img {
+				width: 100%;
+				max-width: 447px;
+				margin: 0 auto;
+				text-align: center;
+				display: flex;
+				@media (max-width: 600px) {
+					max-width: 202px;
+					display: block;
+				}
+			}
+			a {
+				display: block;
+				color: $blackColor;
+				background-color: white;
+				border-radius: 37px;
+				max-width: 392px;
+				width: 100%;
+				margin: 45px auto;
+				text-align: center;
+				padding: 22px 82px;
+				font-size: 24px;
+				font-weight: 700;
+				@media (max-width: 600px) {
+					font-size: 14px;
+					font-weight: 800;
+					display: block;
+					padding: 10px;
+					text-align: center;
+					margin: 10px auto;
+				}
+			}
+		}
 	}
 }
