--- a/src/scss/_burnPage.scss
+++ b/src/scss/_burnPage.scss
@@ -1,114 +1,171 @@
 .burnPage {
-	.headerBoxTopM {
-		width: 100%;
-		@include centerBox(space-between, center);
-		display: none;
-		@media (max-width: 600px) {
-			display: none;
-			padding: 50px 20px 30px;
-		}
-		.righBoxTop {
-			@include centerBox();
-			.hashDisplay {
-				min-width: 159px;
-				padding: 10px;
-				text-align: center;
-				background-color: $blackColor;
-				border-radius: 37.5px;
-				margin-left: 20px;
-				h3 {
-					color: white;
-					font-size: 16px;
-				}
-				.connectBox {
-					font-size: 24px;
-					.btnConnect {
-						background-color: black !important;
-						border: none;
-					}
-				}
-			}
-		}
-	}
-	header {
-		padding: 44px;
-		background-image: url('../assets/desktop/topBackground.png');
-		background-repeat: no-repeat;
-		background-size: cover;
-		@media (max-width: 600px) {
-			background-image: url('../assets/mobile/topBackground.png');
-		}
-		.headerBoxTop {
-			width: 100%;
-			@include centerBox(space-between, center);
-			@media (max-width: 600px) {
-				display: none;
-			}
-			.righBoxTop {
-				@include centerBox();
-				.hashDisplay {
-					min-width: 280px;
-					padding: 10px;
-					text-align: center;
-					background-color: $blackColor;
-					border-radius: 37.5px;
-					margin-left: 20px;
-					h3 {
-						color: white;
-					}
-					.connectBox {
-						font-size: 24px;
-						.btnConnect {
-							background-color: black !important;
-							border: none;
-							color: white;
-							h3 {
-								font-size: 24px;
-							}
-						}
-					}
-				}
-			}
-		}
-		.headerBoxBottom {
-			max-width: 500px;
-			margin: 100px auto 88px;
-			@media (max-width: 600px) {
-				margin: 20px auto 28px;
-			}
+  .headerBoxTopM {
+    width: 100%;
+    @include centerBox(space-between, center);
+    display: none;
+    @media (max-width: 600px) {
+      display: none;
+      padding: 50px 20px 30px;
+    }
+    .righBoxTop {
+      @include centerBox();
+      .hashDisplay {
+        min-width: 159px;
+        padding: 10px;
+        text-align: center;
+        background-color: $blackColor;
+        border-radius: 37.5px;
+        margin-left: 20px;
+        h3 {
+          color: white;
+          font-size: 16px;
+        }
+        .connectBox {
+          font-size: 24px;
+          .btnConnect {
+            background-color: black !important;
+            border: none;
+          }
+        }
+      }
+    }
+  }
+  header {
+    padding: 44px;
+    background-image: url('../assets/desktop/topBackground.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    @media (max-width: 600px) {
+      background-image: url('../assets/mobile/topBackground.png');
+    }
+    .headerBoxTop {
+      width: 100%;
+      @include centerBox(space-between, center);
+      @media (max-width: 600px) {
+        display: none;
+      }
+      .righBoxTop {
+        @include centerBox();
+        .hashDisplay {
+          min-width: 280px;
+          padding: 10px;
+          text-align: center;
+          background-color: $blackColor;
+          border-radius: 37.5px;
+          margin-left: 20px;
+          h3 {
+            color: white;
+          }
+          .connectBox {
+            font-size: 24px;
+            .btnConnect {
+              background-color: black !important;
+              border: none;
+              color: white;
+              h3 {
+                font-size: 24px !important;
+              }
+            }
+          }
+        }
+      }
+    }
+    .headerBoxBottom {
+      max-width: 900px;
+      margin: 100px auto 88px;
+      @media (max-width: 600px) {
+        margin: 20px auto 28px;
+      }
 
-			img {
-				width: 100%;
-				max-width: 447px;
-				margin: 0 auto;
-				text-align: center;
-				display: flex;
-				@media (max-width: 600px) {
-					max-width: 202px;
-					display: block;
-				}
-			}
-			a {
-				display: block;
-				color: $blackColor;
-				background-color: white;
-				border-radius: 37px;
-				max-width: 392px;
-				width: 100%;
-				margin: 45px auto;
-				text-align: center;
-				padding: 22px 82px;
-				font-size: 24px;
-				font-weight: 700;
-				@media (max-width: 600px) {
-					font-size: 14px;
-					font-weight: 800;
-					display: block;
-					padding: 10px;
-					text-align: center;
-					margin: 10px auto;
-				}
-			}
-		}
-	}
+      img {
+        width: 100%;
+        max-width: 447px;
+        margin: 0 auto;
+        text-align: center;
+        display: flex;
+        @media (max-width: 600px) {
+          max-width: 202px;
+          display: block;
+        }
+      }
+      a {
+        display: block;
+        color: $blackColor;
+        background-color: white;
+        border-radius: 37px;
+        max-width: 392px;
+        width: 100%;
+        margin: 45px auto;
+        text-align: center;
+        padding: 22px 82px;
+        font-size: 24px;
+        font-weight: 700;
+        @media (max-width: 600px) {
+          font-size: 14px;
+          font-weight: 800;
+          display: block;
+          padding: 10px;
+          text-align: center;
+          margin: 10px auto;
+        }
+      }
+      .headerOutsideBox {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-content: center;
+        width: 100%;
+        border: 2px solid $color1;
+        border-radius: 15px;
+        height: 400px;
+        overflow: hidden;
+        .headerBoxTitle {
+          text-align: center;
+          font-size: 30px;
+          font-weight: 500;
+          @media (max-width: 600px) {
+            font-size: 20px;
+            font-weight: 700;
+            padding: 10px;
+            margin: 10px auto;
+          }
+        }
+        .headerBoxBurnButton {
+          position: absolute;
+          align-self: center;
+          bottom: 0;
+          width: 75%;
+          max-width: 300px;
+          border-radius: 25px;
+          color: black;
+          background-color: rgb(255, 168, 0);
+          box-shadow: 3px 3px 0px #866b00;
+          padding: 10px;
+          border: none;
+          margin-left: 20px;
+          margin-right: 20px;
+          margin-bottom: 10px;
+          h3 {
+            font-size: 20px;
+          }
+          &:disabled {
+            background-color: red;
+          }
+        }
+      }
+    }
+  }
+
+  .miner-burn {
+    position: absolute;
+    height: 100px;
+    width: 210px;
+    bottom: 0;
+    border-radius: 5px;
+    background: linear-gradient(0deg, rgba(119, 119, 119, 1) 27%, rgba(27, 215, 228, 0) 53%);
+    &.selectedMiner-burn {
+      background: linear-gradient(0deg, rgba(255, 244, 0, 1) 28%, rgba(27, 215, 228, 0) 53%);
+    }
+  }
 }
