--- a/src/scss/_font-colors.scss
+++ b/src/scss/_font-colors.scss
@@ -1,9 +1,8 @@
 @font-face {
-	font-family: 'Chicken Crispy Regular';
-	font-style: normal;
-	font-weight: normal;
-	src: local('Chicken Crispy Regular'),
-		url('../font/ChickenCrispy-YzBe2.woff') format('woff');
+  font-family: 'Chicken Crispy Regular';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Chicken Crispy Regular'), url('../font/ChickenCrispy-YzBe2.woff') format('woff');
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700;800&family=Work+Sans:wght@300;400;500;600;700&display=swap');
