--- a/src/scss/_burnPage.scss
+++ b/src/scss/_burnPage.scss
@@ -72,7 +72,7 @@
     }
     .headerBoxBottom {
       max-width: 900px;
-      margin: 100px auto 88px;
+      margin: 10px auto 88px;
       @media (max-width: 600px) {
         margin: 20px auto 28px;
       }
@@ -118,17 +118,67 @@
         width: 100%;
         border: 2px solid $color1;
         border-radius: 15px;
-        height: 400px;
+        height: 500px;
         overflow: hidden;
-        .headerBoxTitle {
-          text-align: center;
-          font-size: 30px;
-          font-weight: 500;
+        #burnWindowHeader {
+          height: 80px;
+          width: 100%;
+          background-color: $color1;
           @media (max-width: 600px) {
-            font-size: 20px;
-            font-weight: 700;
-            padding: 10px;
-            margin: 10px auto;
+            height: 40px;
+          }
+          #burnWindowHeaderTitle {
+            text-align: center;
+            font-size: 30px;
+            font-weight: 500;
+            padding-top: 10px;
+            @media (max-width: 600px) {
+              font-size: 20px;
+              font-weight: 700;
+              padding: 10px;
+            }
+          }
+          .burnWindowHeaderUtil {
+            margin: 0px 0px 0px 15px;
+            cursor: pointer;
+            font-weight: 800;
+            text-decoration: underline;
+            display: inline-block;
+            font-size: 15px;
+            @media (max-width: 600px) {
+              display: none;
+            }
+            &:hover {
+              opacity: 0.6;
+            }
+          }
+        }
+        #burnWindowMiners {
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+          flex-direction: row;
+          width: 100%;
+          overflow: scroll;
+          overflow-y: auto;
+          height: calc(100% - 25px);
+          overflow-x: hidden;
+          background-color: rgba(0, 0, 0, 0.7);
+          border: 10px solid $color1;
+          .burnWindowMiner {
+            margin: 5px;
+            height: 210px;
+            width: 210px;
+            position: relative;
+            cursor: pointer;
+            @media (max-width: 600px) {
+              height: 150px;
+              width: 150px;
+            }
+            @media (max-width: 450px) {
+              height: 100px;
+              width: 100px;
+            }
           }
         }
         .headerBoxBurnButton {
@@ -148,6 +198,9 @@
           margin-bottom: 10px;
           h3 {
             font-size: 20px;
+            @media (max-width: 600px) {
+              font-size: 15px !important;
+            }
           }
           &:disabled {
             background-color: red;
@@ -166,6 +219,55 @@
     background: linear-gradient(0deg, rgba(119, 119, 119, 1) 27%, rgba(27, 215, 228, 0) 53%);
     &.selectedMiner-burn {
       background: linear-gradient(0deg, rgba(255, 244, 0, 1) 28%, rgba(27, 215, 228, 0) 53%);
+    }
+    @media (max-width: 600px) {
+      width: 150px;
+      height: 80px;
+    }
+    @media (max-width: 450px) {
+      width: 100px;
+      height: 60px;
+    }
+
+    #burnWindowMinerTextContainer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      color: black;
+      bottom: 0;
+      padding: 5px;
+      font-size: 15px;
+      @media (max-width: 600px) {
+        font-size: 10px;
+        padding: 3px;
+      }
+      @media (max-width: 450px) {
+        font-size: 8px;
+        padding: 2px;
+      }
+    }
+
+    #burnWindowMinerCheckBox {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 18px;
+      width: 18px;
+      font-size: 15px;
+      text-align: center;
+      background-color: white;
+      border: 1px solid black;
+      @media (max-width: 600px) {
+        height: 15px;
+        width: 15px;
+        font-size: 13px;
+      }
+      @media (max-width: 450px) {
+        height: 13px;
+        width: 13px;
+        font-size: 10px;
+      }
     }
   }
 }
