--- a/src/scss/_burnPage.scss
+++ b/src/scss/_burnPage.scss
@@ -1,4 +1,5 @@
 .burnPage {
+  min-height: 100vh;
   .headerBoxTopM {
     width: 100%;
     @include centerBox(space-between, center);
@@ -32,6 +33,7 @@
   }
   header {
     padding: 44px;
+    min-height: 60vh;
     background-image: url('../assets/desktop/topBackground.png');
     background-repeat: no-repeat;
     background-size: cover;
@@ -41,9 +43,6 @@
     .headerBoxTop {
       width: 100%;
       @include centerBox(space-between, center);
-      @media (max-width: 600px) {
-        display: none;
-      }
       .righBoxTop {
         @include centerBox();
         .hashDisplay {
@@ -55,6 +54,9 @@
           margin-left: 20px;
           h3 {
             color: white;
+          }
+          @media (max-width: 600px) {
+            display: none;
           }
           .connectBox {
             font-size: 24px;
@@ -72,9 +74,9 @@
     }
     .headerBoxBottom {
       max-width: 900px;
-      margin: 10px auto 88px;
+      margin: 10px auto 70px;
       @media (max-width: 600px) {
-        margin: 20px auto 28px;
+        margin: 20px auto 20px;
       }
 
       img {
@@ -176,30 +178,27 @@
               width: 150px;
             }
             @media (max-width: 450px) {
-              height: 100px;
-              width: 100px;
+              height: 120px;
+              width: 120px;
             }
           }
         }
         .headerBoxBurnButton {
           position: absolute;
           align-self: center;
-          bottom: 0;
-          width: 75%;
-          max-width: 300px;
+          bottom: 20px;
+          width: 80%;
+          max-width: 400px;
           border-radius: 25px;
           color: black;
           background-color: rgb(255, 168, 0);
           box-shadow: 3px 3px 0px #866b00;
           padding: 10px;
           border: none;
-          margin-left: 20px;
-          margin-right: 20px;
-          margin-bottom: 10px;
           h3 {
             font-size: 20px;
             @media (max-width: 600px) {
-              font-size: 15px !important;
+              font-size: 12px !important;
             }
           }
           &:disabled {
@@ -223,11 +222,11 @@
     }
     @media (max-width: 600px) {
       width: 150px;
-      height: 80px;
+      height: 90px;
     }
     @media (max-width: 450px) {
-      width: 100px;
-      height: 60px;
+      width: 120px;
+      height: 80px;
     }
 
     #burnWindowMinerTextContainer {
@@ -240,12 +239,12 @@
       padding: 5px;
       font-size: 15px;
       @media (max-width: 600px) {
-        font-size: 10px;
+        font-size: 15px;
         padding: 3px;
       }
       @media (max-width: 450px) {
-        font-size: 8px;
-        padding: 2px;
+        font-size: 12px;
+        padding: 3px;
       }
     }
 
