--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@
 // Pages
 @import './scss/homePage';
 @import './scss/burnPage';
+@import './scss/claimPage';
 
 // components
 @import './scss/navigation';
